--- a/ProvaSiteware/ProvaSiteware.MVC/Views/Produto/Edit.cshtml
+++ b/ProvaSiteware/ProvaSiteware.MVC/Views/Produto/Edit.cshtml
@@ -4,14 +4,13 @@
     ViewBag.Title = "Edição de Produto";
 }
 
-<h2>Edit</h2>
-
 @using (Html.BeginForm())
 {
+    @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>ProdutoViewModel</legend>
+        <legend>Edição do Produto</legend>
 
         @Html.HiddenFor(model => model.Codigo)
 
@@ -31,14 +30,22 @@
             @Html.ValidationMessageFor(model => model.Preco)
         </div>
 
+        <div class="editor-label">
+            @Html.LabelFor(model => model.TipoPromocao)
+        </div>
+        <div class="editor-field">
+            @Html.DropDownListFor(model => model.TipoPromocao, (ViewBag.Promocoes as IEnumerable<SelectListItem>), "Sem promoção")
+            @Html.ValidationMessageFor(model => model.TipoPromocao)
+        </div>
+
         <p>
-            <input type="submit" value="Save" />
+            <input type="submit" value="Salvar" />
         </p>
     </fieldset>
 }
 
 <div>
-    @Html.ActionLink("Voltar para lista", "Index")
+    @Html.ActionLink("Cancelar", "Index")
 </div>
 
 @section Scripts {
