--- a/ProvaSiteware/ProvaSiteware.MVC/Views/Shared/Error.cshtml
+++ b/ProvaSiteware/ProvaSiteware.MVC/Views/Shared/Error.cshtml
@@ -6,11 +6,10 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Error</title>
+    <title>Erro</title>
 </head>
 <body>
-    <h2>
-        Sorry, an error occurred while processing your request.
+    <h2>Desculpe, ocorreu um erro durante o processamento da sua requisição.
     </h2>
 </body>
 </html>
