--- a/ProvaSiteware/ProvaSiteware.MVC/Views/Produto/Delete.cshtml
+++ b/ProvaSiteware/ProvaSiteware.MVC/Views/Produto/Delete.cshtml
@@ -4,11 +4,9 @@
     ViewBag.Title = "Exclusão de Produto";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Deseja realmente excluir esse produto?</h3>
 <fieldset>
-    <legend>ProdutoViewModel</legend>
+    <legend>Exclusão de Produto</legend>
 
     <div class="display-label">
         @Html.DisplayNameFor(model => model.Nome)
@@ -26,9 +24,9 @@
 </fieldset>
 @using (Html.BeginForm())
 {
+    @Html.AntiForgeryToken()
     <p>
-        <input type="submit" value="Delete" />
-        |
-        @Html.ActionLink("Voltar para lista", "Index")
+        <input type="submit" value="Excluir" />
+        @Html.ActionLink("Cancelar", "Index")
     </p>
 }
