--- a/ProvaSiteware/ProvaSiteware.MVC/Views/Shared/_Layout.cshtml
+++ b/ProvaSiteware/ProvaSiteware.MVC/Views/Shared/_Layout.cshtml
@@ -8,6 +8,9 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    @Html.ActionLink("Lista de Produtos", "Index", "Produto") | 
+    @Html.ActionLink("Carrinho", "Index", "Carrinho")
+
     @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
