Implementação do layout usando Bootstrap e correção de alguns bugs

--- a/ProvaSiteware/ProvaSiteware.MVC/Views/Produto/Delete.cshtml
+++ b/ProvaSiteware/ProvaSiteware.MVC/Views/Produto/Delete.cshtml
@@ -4,29 +4,39 @@
     ViewBag.Title = "Exclusão de Produto";
 }
 
-<h3>Deseja realmente excluir esse produto?</h3>
-<fieldset>
-    <legend>Exclusão de Produto</legend>
+<div class="page-header">
+    <h2>Exclusão de Produto</h2>
+</div>
 
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Nome)
-    </div>
-    <div class="display-field">
+<h3>Deseja realmente excluir esse produto?</h3>
+
+<div class="row">
+    <div class="col-md-12">
+        @Html.LabelFor(model => model.Nome, new { @class = "form-label" })
         @Html.DisplayFor(model => model.Nome)
     </div>
+</div>
 
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Preco)
-    </div>
-    <div class="display-field">
+<div class="row">
+    <div class="col-md-12">
+        @Html.LabelFor(model => model.Preco, new { @class = "form-label" })
         @Html.DisplayFor(model => model.Preco)
     </div>
-</fieldset>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+        @Html.LabelFor(model => model.Promocao.Nome, new { @class = "form-label" })
+        @Html.DisplayFor(model => model.Promocao.Nome)
+    </div>
+</div>
+
+<br />
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     <p>
-        <input type="submit" value="Excluir" />
-        @Html.ActionLink("Cancelar", "Index")
+        <input type="submit" value="Excluir" class="btn btn-danger btn-cons" />
+        @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-default btn-cons" })
     </p>
 }
