--- a/ProvaSiteware/ProvaSiteware.MVC/Content/Site.css
+++ b/ProvaSiteware/ProvaSiteware.MVC/Content/Site.css
@@ -3,6 +3,7 @@
     font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
     color: #232323;
     background-color: #fff;
+    padding-top: 50px;
 }
 
 header, footer, nav, section {
