--- a/ProvaSiteware/ProvaSiteware.MVC/Views/Produto/Create.cshtml
+++ b/ProvaSiteware/ProvaSiteware.MVC/Views/Produto/Create.cshtml
@@ -1,51 +1,52 @@
 ﻿@model ProvaSiteware.MVC.ViewModels.ProdutoViewModel
 
+@using ProvaSiteware.MVC.Helpers
+
 @{
     ViewBag.Title = "Inclusão de Produto";
 }
+
+<div class="page-header">
+    <h2>Inclusão de Produto</h2>
+</div>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
-    <fieldset>
-        <legend>Inclusão de Produto</legend>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Nome)
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form-group">
+                @Html.LabelFor(model => model.Nome, new { @class = "form-label" })
+                @Html.TextBoxFor(model => model.Nome, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "error" })
+            </div>
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Nome)
-            @Html.ValidationMessageFor(model => model.Nome)
-        </div>
+    </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Preco)
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form-group">
+                @Html.LabelFor(model => model.Preco, new { @class = "form-label" })
+                @Html.TextBoxFor(model => model.Preco, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Preco, "", new { @class = "error" })
+            </div>
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Preco)
-            @Html.ValidationMessageFor(model => model.Preco)
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form-group">
+                @Html.LabelFor(model => model.TipoPromocao, new { @class = "form-label" })
+                @Html.CustomEnumDropDownListFor(model => model.TipoPromocao, null, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.TipoPromocao, "", new { @class = "error" })
+            </div>
         </div>
+    </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.TipoPromocao)
-        </div>
-        <div class="editor-field">
-            @Html.DropDownListFor(model => model.TipoPromocao, (ViewBag.Promocoes as IEnumerable<SelectListItem>), "Sem promoção")
-            @Html.ValidationMessageFor(model => model.TipoPromocao)
-        </div>
-
-        <p>
-            <input type="submit" value="Salvar" />
-        </p>
-    </fieldset>
-}
-
-<div>
-    @Html.ActionLink("Cancelar", "Index")
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    <p>
+        <input type="submit" value="Salvar" class="btn btn-success btn-cons" />
+        @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-default btn-cons" })
+    </p>
 }
