--- a/ProvaSiteware/ProvaSiteware.MVC/Views/Produto/Details.cshtml
+++ b/ProvaSiteware/ProvaSiteware.MVC/Views/Produto/Details.cshtml
@@ -4,30 +4,31 @@
     ViewBag.Title = "Detalhes do Produto";
 }
 
-<fieldset>
-    <legend>Detalhes do Produto</legend>
+<div class="page-header">
+    <h2>Detalhes do Produto</h2>
+</div>
 
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Nome)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Nome)
-    </div>
+<div class="display-label">
+    @Html.DisplayNameFor(model => model.Nome)
+</div>
+<div class="display-field">
+    @Html.DisplayFor(model => model.Nome)
+</div>
 
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Preco)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Preco)
-    </div>
+<div class="display-label">
+    @Html.DisplayNameFor(model => model.Preco)
+</div>
+<div class="display-field">
+    @Html.DisplayFor(model => model.Preco)
+</div>
 
-    <div class="display-label">
-        @Html.DisplayNameFor(model => model.Promocao.Nome)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Promocao.Nome)
-    </div>
-</fieldset>
+<div class="display-label">
+    @Html.DisplayNameFor(model => model.Promocao.Nome)
+</div>
+<div class="display-field">
+    @Html.DisplayFor(model => model.Promocao.Nome)
+</div>
+
 <p>
     @Html.ActionLink("Adicionar ao Carrinho", "Add", "Carrinho", new { codigoProduto = Model.Codigo }, null) |
     @Html.ActionLink("Voltar", "Index")
