--- a/ProvaSiteware/ProvaSiteware.MVC/Views/Shared/_Layout.cshtml
+++ b/ProvaSiteware/ProvaSiteware.MVC/Views/Shared/_Layout.cshtml
@@ -2,18 +2,52 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@ViewBag.Title</title>
+
     @Styles.Render("~/Content/css")
+
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jqueryui")
+    @Scripts.Render("~/bundles/bootstrap")
+
 </head>
 <body>
-    @Html.ActionLink("Lista de Produtos", "Index", "Produto") | 
-    @Html.ActionLink("Carrinho", "Index", "Carrinho")
 
-    @RenderBody()
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Prova Siteware</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li>
+                        @Html.ActionLink("Lista de Produtos", "Index", "Produto")
+                    </li>
+                    <li>
+                        @Html.ActionLink("Carrinho", "Index", "Carrinho")
+                    </li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
+        </div>
+    </nav>
 
-    @Scripts.Render("~/bundles/jquery")
+    <div class="container">
+        @RenderBody()
+    </div>
+
     @RenderSection("scripts", required: false)
+
 </body>
 </html>
+
+
