Últimos ajustes de layout e exclusão dos projetos que não estavam sendo usados.

--- a/ProvaSiteware/ProvaSiteware.MVC/Views/Carrinho/Index.cshtml
+++ b/ProvaSiteware/ProvaSiteware.MVC/Views/Carrinho/Index.cshtml
@@ -39,7 +39,7 @@
 
                 </td>
                 <td>
-                    @Html.TextBox("[" + i + "].Quantidade", item.Quantidade, new { @class = "form-control" })
+                    @Html.TextBox("[" + i + "].Quantidade", item.Quantidade, new { @class = "form-control input-sm" })
                     @Html.ValidationMessage("[" + i + "].Quantidade", new { @class = "error" })
                 </td>
                 <td>
