--- a/ProvaSiteware/ProvaSiteware.MVC/Content/Site.css
+++ b/ProvaSiteware/ProvaSiteware.MVC/Content/Site.css
@@ -1,41 +1,10 @@
 ﻿body {
-    font-size: .85em;
-    font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
-    color: #232323;
-    background-color: #fff;
     padding-top: 50px;
 }
 
-header, footer, nav, section {
-    display: block;
+.table td {
+    vertical-align: middle !important;
 }
-
-
-/* Styles for basic forms
------------------------------------------------------------*/
-fieldset {
-    border: 1px solid #ddd;
-    padding: 0 1.4em 1.4em 1.4em;
-    margin: 0 0 1.5em 0;
-}
-
-legend {
-    font-size: 1.2em;
-    font-weight: bold;
-}
-
-textarea {
-    min-height: 75px;
-}
-
-.editor-label {
-    margin: 1em 0 0 0;
-}
-
-.editor-field {
-    margin: 0.5em 0 0 0;
-}
-
 
 /* Styles for validation helpers
 -----------------------------------------------------------*/
@@ -60,3 +29,4 @@ textarea {
 .validation-summary-valid {
     display: none;
 }
+
