--- a/ProvaSiteware/ProvaSiteware.MVC/Views/Shared/_Layout.cshtml
+++ b/ProvaSiteware/ProvaSiteware.MVC/Views/Shared/_Layout.cshtml
@@ -25,13 +25,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Prova Siteware</a>
+                <a class="navbar-brand" href="#">SW e-commerce</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li>
-                        @Html.ActionLink("Lista de Produtos", "Index", "Produto")
+                        @Html.ActionLink("Produtos", "Index", "Produto")
                     </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
                     <li>
                         @Html.ActionLink("Carrinho", "Index", "Carrinho")
                     </li>
