Organizei e renomeei os projetos

--- a/ProvaSiteware/ProvaSiteware.MVC/Views/Carrinho/Index.cshtml
+++ b/ProvaSiteware/ProvaSiteware.MVC/Views/Carrinho/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ProvaSiteware.MVC.ViewModels.ItemCarrinhoViewModel>
+﻿@model IEnumerable<Lab.Presentation.MVC.ViewModels.ItemCarrinhoViewModel>
 
 @{
     ViewBag.Title = "Carrinho";
