--- a/ProvaSiteware/ProvaSiteware.MVC/Views/Produto/Create.cshtml
+++ b/ProvaSiteware/ProvaSiteware.MVC/Views/Produto/Create.cshtml
@@ -1,6 +1,6 @@
-﻿@model ProvaSiteware.MVC.ViewModels.ProdutoViewModel
+﻿@model Lab.Presentation.MVC.ViewModels.ProdutoViewModel
 
-@using ProvaSiteware.MVC.Helpers
+@using Lab.Presentation.MVC.Helpers
 
 @{
     ViewBag.Title = "Inclusão de Produto";
