--- a/ProvaSiteware/ProvaSiteware.MVC/Views/Produto/Delete.cshtml
+++ b/ProvaSiteware/ProvaSiteware.MVC/Views/Produto/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProvaSiteware.MVC.ViewModels.ProdutoViewModel
+﻿@model Lab.Presentation.MVC.ViewModels.ProdutoViewModel
 
 @{
     ViewBag.Title = "Exclusão de Produto";
