--- a/ProvaSiteware/ProvaSiteware.MVC/Views/Produto/Index.cshtml
+++ b/ProvaSiteware/ProvaSiteware.MVC/Views/Produto/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ProvaSiteware.MVC.ViewModels.ProdutoViewModel>
+﻿@model IEnumerable<Lab.Presentation.MVC.ViewModels.ProdutoViewModel>
 
 @{
     ViewBag.Title = "Lista de Produtos";
