Ajustes na validação das entidades e refatoração dos repositórios

--- a/Lab/Lab.Presentation.MVC/Views/Produto/Create.cshtml
+++ b/Lab/Lab.Presentation.MVC/Views/Produto/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Lab.Presentation.MVC.ViewModels.ProdutoViewModel
+﻿@model Lab.Domain.Entities.Produto
 
 @using Lab.Presentation.MVC.Helpers
 
