--- a/Lab/Lab.Presentation.MVC/Views/Produto/Delete.cshtml
+++ b/Lab/Lab.Presentation.MVC/Views/Produto/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Lab.Presentation.MVC.ViewModels.ProdutoViewModel
+﻿@model Lab.Domain.Entities.Produto
 
 @{
     ViewBag.Title = string.Format(Resource.ExclusaoDeX, Resource.Produto);
