--- a/Lab/Lab.Presentation.MVC/Views/Produto/Index.cshtml
+++ b/Lab/Lab.Presentation.MVC/Views/Produto/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Lab.Presentation.MVC.ViewModels.ProdutoViewModel>
+﻿@model IEnumerable<Lab.Domain.Entities.Produto>
 
 @{
     ViewBag.Title = string.Format(Resource.ListaDeX, Resource.Produtos);
